--- a/src/main/resources/templates/Feature3-Dashboard/calendar.html
+++ b/src/main/resources/templates/Feature3-Dashboard/calendar.html
@@ -181,7 +181,7 @@
   const selectCourse = document.getElementById("select");
 
   selectCourse.addEventListener("change", function () {
-      course.value = selectCourse.innerHTML;
+      course.value = selectCourse.value;
   })
 
   saveBtn.addEventListener("click", function () {
@@ -193,6 +193,7 @@
       xhr.send(data)
       xhr.onreadystatechange = function () {
           if (xhr.readyState == 4 && xhr.status == 200) {
+
               console.log(data)
           }
       }
