--- a/src/main/resources/templates/Feature3-Dashboard/dashboard.html
+++ b/src/main/resources/templates/Feature3-Dashboard/dashboard.html
@@ -26,6 +26,7 @@
 
     </table>
 
+
     <div class="m-5">
         <table style="margin-left:auto;margin-right:auto;">
             <tr>
@@ -39,7 +40,7 @@
                             </tr>
                         </table>
                         <table>
-                            <tr>
+                            <tr >
                                 <td>
                                     <canvas id="piechart" style="width:150%;"></canvas>
                                 </td>
@@ -57,17 +58,9 @@
                             </tr>
                         </table>
                         <table class="skillsTable">
-                            <tr> 
+                            <tr > 
 
                                 <td  th:each="skill : ${skillTitles}" class="award shadow p-0.5 mb-5 rounded"> <span th:text="${skill}" > </span></td>
-                                 <!-- <td class="award shadow p-0.5 mb-5 rounded"> Java</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> PYTHON</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> JAVASCRIPT</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> Natural Language Processing</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> R</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> SQL</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> Ruby</td>
-                                 <td class="award shadow p-0.5 mb-5 rounded"> AngulaJS</td> -->
                             </tr>
                         </table>
                     </div>
@@ -82,7 +75,7 @@
                                     <p><b>Courses</b></p>
                                 </td>
                                 <td width="10%">
-                                    <a th:href="@{/my-courses/}" class="link-secondary">Manage</a>
+                                    <a th:href="@{/myCourses/manageProgress}" class="link-secondary">Manage</a>
                                 </td>
                             </tr>
                         </table>
@@ -91,7 +84,7 @@
                             <tr th:each="course : ${myCourses}">
 
                                 <td aligh="left"  style= "width: 20% ; font-size: x-small; font-weight: bold;"><span th:text="${course.myCourseTitle}" ></span></td>
-                                <td class="progress progress-bar" role="progressbar" th:style="'width:' + ( ${course.progress}) + '%;'"  aria-valuenow="(${course.progress})" aria-valuemin="0" aria-valuemax="100" th:text="${course.progress}+'%'"></td>
+                                <td class="progress progress-bar" role="progressbar" th:style="'width:' + ( ${course.progress}) + '%;'"  aria-valuenow="'width:' + ( ${course.progress}) + '%;'"  aria-valuemin="0" aria-valuemax="100" th:text="${course.progress}+'%'"></td>
                                 
                                     <!-- <canvas id="progressbar" style="width:150%; height:300%;"></canvas> -->
                                 
@@ -176,11 +169,37 @@
 
     </div>
 
-    <script>
+
+
+    <script th:inline="javascript">
 
         // this is for the pie chart
-        var xValues = ["Java", "Python", "SQL","CSS", "Android"];
-        var yValues = [20, 10, 10, 50, 10];
+        
+        var skillLTitles=/*[[${skillTitles}]]*/ [];
+        var unFinishPart = ["unFinished"];
+        skillLTitles.push.apply(skillLTitles,unFinishPart);
+        console.log(skillLTitles);
+
+        var progressList= /*[[${progressList}]]*/ [];
+
+        var totalFinishedPercentage = 0;
+
+        //change actual progress based on numbers of skill that have
+        for(var i=0; i< progressList.length; i++){
+            progressList[i]= progressList[i]/progressList.length;
+            totalFinishedPercentage += progressList[i];
+        }
+
+ 
+
+        var unFinishedPerentage =  (100-totalFinishedPercentage);
+
+        var unFinishedPer = [unFinishedPerentage];
+        progressList.push.apply(progressList,unFinishedPer);
+
+   
+        var dreamJobTitle = /*[[${dreamJobTitle}]]*/ 'Dream Job Title'
+
         var barColors = [
           "#b91d47",
           "#00aba9",
@@ -192,17 +211,17 @@
         new Chart("piechart", {
           type: "pie",
           data: {
-            labels: xValues,
+            labels: skillLTitles,
             datasets: [{
               backgroundColor: barColors,
-              data: yValues
+              data: progressList
             }]
           },
           options: {
             maintainAspectRatio:false,
             title: {
               display: true,
-              text: "DATA ANALYST"
+              text: dreamJobTitle
             },
             responsive: true,
         // show percentage of slice when hover
