--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
@@ -189,7 +189,8 @@
 
 
     selectCourse.addEventListener("change", function () {
-        course.value = selectCourse.value;
+        txtNote.value = selectCourse.value;
+        txtNote.innerHTML = selectCourse.value;
     })
 
     saveBtn.addEventListener("click", function () {
